Add some information to QueueDetails page
