# application/server/src/router.js
@@ -24,6 +24,7 @@ mainRouter.get('/queue/get', [
 ]);
 mainRouter.post('/queue/create', queue.create);
 mainRouter.post('/queue/:queue/remove', queue.remove);
+mainRouter.get('/queue/:queue/get', queue.getOne);
 
 mainRouter.get('/queue/:queue/room/get', room.get);
 mainRouter.post('/queue/:queue/room/create', room.create);
